Use builder to create GoPluginDescriptor.
- Removed all constructors
- Removed usingId method